--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Previsão do tempo</title>
+  <title>Previsão do Tempo</title>
 </head>
 
 <body>
